nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    # kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /nextcloud
        pathType: Prefix
        backend:
          service:
            name: nextcloud-remote
            port: 
              number: 8080
